# chatPythonWebsocket

./: README.md  pyproject.toml
src/chat/: __init__.py
src/chat/templates/: index.html
